xmonad.errors

xmonad.hs:831:1: error:
    parse error (possibly incorrect indentation or mismatched brackets)
    |
831 | myMouseBindings (XConfig {XMonad.modMask = modm}) = M.fromList $
    | ^
